[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "torii"
version = "0.3.7"
description = "Terminal dashboard for managing parallel Claude Code sessions"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.80.0",
    "libtmux>=0.28.0",
]

[project.scripts]
torii = "torii.main:main"
